--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#portfolio"><span>Portfolio</span></a>
       <a href="mailto:Subhanoddin18@gmail.com" id="contact"><span>Contact</span></a>
       <div class="icons">
-        <a href="https://github.com/monkeyDsubhan" target="blank" class="icon"><img src="img/github.svg" alt="Github"></a>
+        <a href="https://github.com/subhanoddin" target="blank" class="icon"><img src="img/github.svg" alt="Github"></a>
         <a href="https://drive.google.com/file/d/1KQyPFEr4cTAvs8NfaMMjIHMTHVHHFSUR/view?usp=sharing" target="blank" class="icon"><img src="img/resume.svg" alt="Resume"></a>
         <a href="https://www.linkedin.com/in/subhanoddin-mohummad-29b439280/" target="_blank" class="icon"><img src="img/linkedin.svg"
             alt="Linkedin"></a>
@@ -141,7 +141,7 @@
           </div>
 
         </div>
-        <div class="seeMore"><a href="https://github.com/monkeyDsubhan/AIML-ChatBot-for-DBMS-with-UI.git" target="_blank">Application</a></div>
+        <div class="seeMore"><a href="https://github.com/subhanoddin/AIML-ChatBot-for-DBMS-with-UI.git" target="_blank">Application</a></div>
       </div>
       <div class="project imgProject">
         <h1>Projet #2 - Hunger Street UI Design</h1>
@@ -280,7 +280,7 @@
           </div>
 
         </div>
-        <div class="seeMore"><a href="https://github.com/monkeyDsubhan/Java-OOPC-concept-Cafe-management-.git" target="_blank">See application</a></div>
+        <div class="seeMore"><a href="https://github.com/subhanoddin/Java-OOPC-concept-Cafe-management-.git" target="_blank">See application</a></div>
       </div>
       <div class="project imgProject">
         <h1>Projet #4 -HUNGER STREET'S RESTAURANT</h1>
@@ -349,7 +349,7 @@
           </div>
 
         </div>
-        <div class="seeMore"><a href="https://github.com/monkeyDsubhan/Online-Restaurant-Web-Page-With-Database-Connection-.git"
+        <div class="seeMore"><a href="https://github.com/subhanoddin/Online-Restaurant-Web-Page-With-Database-Connection-.git"
             target="_blank">Application</a></div>
       </div>
 
