--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <h1>Projet #4 -HUNGER STREET'S RESTAURANT</h1>
         <p>
           Hunger Streets is an online restaurant delivery platform designed to provide users with a seamless experience for browsing,<em>ordering, and reviewing food items from a variety of restaurants.</em>.The platform features a user-friendly interface
-          where customers can explore diverse menus, read and leave reviews, and manage their orders with ease. Integrated with a robust backend powered by a MySQL database and PHP, Hunger Streets ensures that all data, including user profiles, past orders, and restaurant details, is securely managed and easily accessible. <em>hether through the intuitive checkout process <em>capacités or the detailed restaurant listings</em>, Hunger Streets is committed to delivering an exceptional online food ordering experience.
+          where customers can explore diverse menus, read and leave reviews, and manage their orders with ease. Integrated with a robust backend powered by a MySQL database and PHP, Hunger Streets ensures that all data, including user profiles, past orders, and restaurant details, is securely managed and easily accessible. <em>through the intuitive checkout process <em>the detailed restaurant listings</em>, Hunger Streets is committed to delivering an exceptional online food ordering experience.
 
 
         </p>
